# LovelyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
Graphics/: CMakeLists.txt
Graphics/src/: main.cpp
core/: CMakeLists.txt  main.cpp
core/include/Graphics/: Camera.h  ElementBuffer.h  Material.h  Shader.h  Texture.h  Transform.h  VertexArray.h  VertexBuffer.h  Window.h
core/include/Input/: Keyboard.h
core/include/System/: Exceptions.h  Types.h  Utility.h  Utility.inl  Vector.h  Vector.inl  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl  VectorT.h
core/res/Shaders/: basic.fs  basic.vs
core/src/Graphics/: Camera.cpp  ElementBuffer.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
core/src/System/: Exceptions.cpp  Utility.cpp
res/Shaders/: basic.fs  basic.vs
test/Graphics/: TransformTest.cpp
test/System/: UtilityTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
